refactoring to GraalVM